# lti-app-provider

./: .env.example  .gitignore  README.md  poetry.toml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: database.py  lti.py
app/routes/: home.py  lti.py
app/services/: lti.py
tests/: create_test_deployment.py
